# batonmon

./: .gitignore  batonmon.service  input_switch.py  script.fish
batonmon/: Cargo.toml
batonmon/src/: main.rs
src/: main.rs
